Added framework to add a new user to the system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 # end points for slave db
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=${slave.jdbc.url}
-spring.datasource.username=${slave.jdbc.user}
-spring.datasource.password=${slave.jdbc.pass}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:/paytm/bo-panel/interview-tracking
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+logging.level.org.thymeleaf=TRACE
+logging.level.org.springframework.boot=TRACE
