--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:h2:file:/paytm/bo-panel/interview-tracking
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # H2
